Create links actions (index and destroy)

--- a/apps/admin/templates/shared/_navbar.html.slim
+++ b/apps/admin/templates/shared/_navbar.html.slim
@@ -11,7 +11,7 @@ nav.navbar.navbar-default
     #bs-example-navbar-collapse-1.collapse.navbar-collapse
       ul.nav.navbar-nav
         li
-          = link_to 'Links', '#'
+          = link_to 'Links', routes.links_path
 
       ul.nav.navbar-nav.navbar-right
         li
