Delete link in links#index page

--- a/apps/admin/templates/links/index.html.slim
+++ b/apps/admin/templates/links/index.html.slim
@@ -4,9 +4,11 @@ table.table.table-striped
       th #
       th url
       th Redirection count
+      th
   tbody
     - links.each do |link|
       tr
         th scope="row" = link.id
         td = external_link_to(link.url)
         td = link.redirection_count
+        td = delete_link_form(link)
